--- a/pack/texts/de_DE.lang
+++ b/pack/texts/de_DE.lang
@@ -6,7 +6,7 @@
 #                  www.texturepack.be			
 ####################################################
 menu.returnToGame=§aSpiel fortsetzten
-pauseScreen.back=§aSpiel fortsetzten
+pauseScreen.back=§aSpiel fortsetzen
 pauseScreen.quit=§cRyzer.BE verlassen :(
 pauseScreen.secondaryClientLeave=§cRyzer.BE verlassen :(
 ####################################################
