--- a/pack/texts/de_DE.lang
+++ b/pack/texts/de_DE.lang
@@ -5,8 +5,8 @@
 #
 #                  www.texturepack.be			
 ####################################################
-menu.returnToGame=§aSpiel fortsetzten
-pauseScreen.back=§aSpiel fortsetzten
+menu.returnToGame=§aSpiel fortsetzen
+pauseScreen.back=§aSpiel fortsetzen
 pauseScreen.quit=§cRyzer.BE verlassen :(
 pauseScreen.secondaryClientLeave=§cRyzer.BE verlassen :(
 ####################################################
